<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shoplocator.ui.shops.detail.view.ShopDetailFragment"
    android:background="@android:color/white"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/content_shop_image"
        android:background="@color/colorWindowBackground"
        />

    <TextView
        android:text="@string/item_shop_owner_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewShopOwner"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/item_shop_coordinate_x_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCoordinate"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewShopOwner"
        app:layout_constraintLeft_toLeftOf="@+id/textViewShopOwner" />

</android.support.constraint.ConstraintLayout>
