<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:text="@string/try_again"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textAllCaps="true"
        app:backgroundTint="?attr/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/textViewDescription"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTryAgain"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/no_internet_connection_description"
        />

    <TextView
        android:id="@+id/textViewTitle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/no_internet_connection_title"
        />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTitle"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:id="@+id/imageViewConnectionIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:contentDescription="@string/connection_error"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/no_internet_connection"
            android:layout_marginTop="26dp"
            />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>